=====================
Django MPTT CHANGELOG
=====================

.. contents::

Trunk Changes
=============

Fri 4th Jan, 2008
-----------------

* Started implementing moving of nodes to be siblings of roots. This is
  a special case due to our use of a tree id, so it's dealt with in
  ``move_node``.

  As a result, no other node movement implementation methods have to
  check for this special case - they can be sure they'll never have to
  handle a root sibling move, as ``move_node`` will never give them one
  to deal with.

* Simplified the node movement API - ``move_node`` is now the only
  public means of moving a node, as it can figure out what to do based
  on the node and target it's given.

  This simplifies implementation somewhat, as the methods which actually
  do the moving can trust their caller with the arguments which were
  given.

* Added ``is_root_node`` and ``is_child_node`` methods to ``Model``
  instances.

Version 0.1
===========

Packaged from revision 37 in Subversion.

Fri 4th Jan, 2008
-----------------

* Added a ``tree_info`` template filter and a ``full_tree_for_model``
  template tag.

Thu 3rd Jan, 2008
-----------------

* Updated documentation with latest changes, a high level overview of
  features and more details about node movement. Moved detailed
  information about MPTT setup internals to the end of the document.

* Reworked exceptions - ``InvalidMove`` is now raised when an invalid
  move is attempted.

* Added a ``move_to`` convenience method to ``Model`` instances.

* Implemented the ``position`` argument for ``make_child_node`` and
  ``move_node`` in ``TreeManager``. The node movement API can now be
  used to move any node to an arbitrary point in any tree.

* Implemented the ``position`` argument for
  ``TreeManager.move_to_new_tree``.

* Implemented a ``position`` argument for
  ``TreeManager.move_within_tree``. The node being moved can now be made
  a sibling, first child or last child of the target node.
